<resources>
    <string name="app_name">AndroidProject</string>

    <string name="army_one_losses">Army One Losses:</string>
    <string name="army_two_losses">Army Two Losses:</string>
    <string name="army_two">Army Two:</string>
    <string name="army_one">Army One:</string>
    <string name="battle_for_the_ages">Battle for the ages</string>
    <string name="pussy_out">Pussy Out</string>
    <string name="keep_fighting">Keep Fighting</string>
    <string name="kill_the_commies">Kill The Commies</string>
    <string name="simulate_battle">Simulate Battle</string>
    <string name="yeet">Yeet</string>
    <string name="sign_in_title">Please Sign In</string>
    <string name="sign_in_alert_message">Currently all users must sign in before proceeding to the next screen</string>

</resources>
